@@ -1,0 +1,7 @@
+SECTIONS
+{
+  .text : { *(.text) }
+  .data : { *(.data) }
+  .bss : { *(.bss) *(COMMON) }
+  .note : { *(.note) }
+}
