@@ -1,0 +1,10 @@
+	.text
+	.long 0
+	.data
+	.long 0
+	.section .note,"a","note"
+	.long 0
+	.section .notbad,"a","progbits"
+	.long 0
+	.section .note.bar,"a","note"
+	.long 0
